// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlSelect all options renders 1`] = `
<body>
  <div>
    <div
      class="relative bg-red-light"
    >
      <div>
        <label
          class="inline-block color-white"
          id="radix-6"
          role="label"
        >
          All options
           
          <span
            class="txt-normal"
          >
            (optional)
          </span>
        </label>
        <span
          class="inline-block ml12"
        >
          <span>
            Aside text
          </span>
        </span>
      </div>
      <div
        class="select-container color-white"
      >
        <select
          aria-invalid="true"
          aria-labelledby="radix-6"
          aria-required="false"
          class="select select--red"
          data-testid="allOptions-select"
          id="allOptions"
        >
          <option
            value="Option value 1"
          >
            Option 1
          </option>
          <option
            value="Option value 2"
          >
            Option 2
          </option>
          <option
            disabled=""
            value="Option value 3"
          >
            Option 3
          </option>
        </select>
        <div
          class="select-arrow"
        />
      </div>
      <div
        role="alert"
      >
        <div
          class="bg txt-s mt3 py6 px12 bg-red-faint round border border--red color-red"
          data-testid="allOptions-error"
          id="allOptions-error"
        >
          oh no!
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ControlSelect basic renders 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-0"
          role="label"
        >
          Basic
           
        </label>
      </div>
      <div
        class="select-container "
      >
        <select
          aria-labelledby="radix-0"
          aria-required="true"
          class="select "
          data-testid="testinput-select"
          id="testinput"
        >
          <option
            value="Option value 1"
          >
            Option 1
          </option>
          <option
            value="Option value 2"
          >
            Option 2
          </option>
        </select>
        <div
          class="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</body>
`;

exports[`ControlSelect disabled renders 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-2"
          role="label"
        >
          Basic
           
        </label>
      </div>
      <div
        class="select-container "
      >
        <select
          aria-labelledby="radix-2"
          aria-required="true"
          class="select "
          data-testid="testinput-select"
          disabled=""
          id="testinput"
        >
          <option
            value="Option value 1"
          >
            Option 1
          </option>
          <option
            value="Option value 2"
          >
            Option 2
          </option>
        </select>
        <div
          class="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</body>
`;

exports[`ControlSelect grouped dropdown options renders 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-4"
          role="label"
        >
          Basic
           
        </label>
      </div>
      <div
        class="select-container "
      >
        <select
          aria-labelledby="radix-4"
          aria-required="true"
          class="select "
          data-testid="testinput-select"
          disabled=""
          id="testinput"
        >
          <optgroup
            label="Group One"
          >
            <option
              value="foo"
            >
              Foo
            </option>
            <option
              value="bar"
            >
              Bar
            </option>
          </optgroup>
          <optgroup
            label="Group two"
          >
            <option
              value="baz"
            >
              Baz
            </option>
            <option
              value="qux"
            >
              Qux
            </option>
          </optgroup>
        </select>
        <div
          class="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</body>
`;

exports[`ControlSelect supported values renders 1`] = `
<body>
  <div>
    <div
      class="relative "
    >
      <div>
        <label
          class="inline-block txt-s txt-bold mb6"
          id="radix-5"
          role="label"
        >
          Basic
           
        </label>
      </div>
      <div
        class="select-container "
      >
        <select
          aria-labelledby="radix-5"
          aria-required="true"
          class="select "
          data-testid="value-select"
          id="value"
        >
          <option
            value=""
          >
            Empty string
          </option>
          <option
            value="foo"
          >
            String
          </option>
          <option
            value="123"
          >
            Number
          </option>
        </select>
        <div
          class="select-arrow"
        />
      </div>
      <div
        role="alert"
      />
    </div>
  </div>
</body>
`;
